@@ -2,6 +2,7 @@ Please view this file on the master branch, on stable branches it's out of date.
 
 v 8.5.2
   - Fix sidebar overlapping content when screen width was below 1200px
+  - Don't repeat labels listed on Labels tab
   - Bring the "branded appearance" feature from EE to CE
   - Fix error 500 when commenting on a commit
   - Update Rails to 4.2.5.2
